--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
-Django==3.2.23
+Django==4.2.9
 django-allauth==0.41.0
+django-crispy-forms==2.1
 oauthlib==3.2.2
+pillow==10.2.0
 python3-openid==3.2.0
 pytz==2023.4
 requests-oauthlib==1.3.1
