--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.7.2
-Django==4.2.9
-django-allauth==0.41.0
+Django==3.2.14
+django-allauth==0.51.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.2
 pillow==10.2.0
+PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.4
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+stripe==8.1.0
